# password-strength-checker

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
resources/: common_passwords.txt
src/password_strength_checker/: main.py
src/password_strength_checker/application/dto/: generated_password_dto.py  password_analysis_dto.py
src/password_strength_checker/application/reports/: __init__.py  csv_report.py  json_report.py  report_data.py  report_exporter.py  txt_report.py
src/password_strength_checker/application/use_cases/: analyze_password.py  generate_password.py
src/password_strength_checker/domain/entities/: generated_password.py  password_analysis.py  password_generation_options.py
src/password_strength_checker/domain/enums/: strength_level.py
src/password_strength_checker/domain/repositories/: common_password_repository.py
src/password_strength_checker/domain/services/: entropy_calculator.py  feedback_generator.py  password_scorer.py  (+2 more)
src/password_strength_checker/presentation/: app.py  main_window.py  styles.py  widgets.py
src/password_strength_checker/shared/: constants.py  exceptions.py
tests/integration/: test_analyze_password_use_case.py  test_generate_password_use_case.py  test_main_factories.py
tests/unit/: test_common_password_repository.py  test_entropy_calculator.py  test_feedback_generator.py  test_password_analysis_dto.py  test_password_generator.py  test_password_scorer.py  test_pattern_detector.py  test_report_exporter.py  test_report_formatters.py  test_settings_and_logging.py  test_strength_level.py
(+3 files in other folders)
